Implemented random forest

--- a/heart_attack_prediction.ipynb
+++ b/heart_attack_prediction.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "id": "c93da267-3ed6-43f1-a8fd-e0b700076ed7",
    "metadata": {},
    "outputs": [
@@ -426,7 +426,7 @@
        "[246022 rows x 40 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,6 +440,7 @@
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.tree import plot_tree\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "import matplotlib.pyplot as plt\n",
     "data = pd.read_csv(\"heart_2022_no_nans.csv\")\n",
     "data"
@@ -2343,7 +2344,6 @@
    ],
    "source": [
     "plt.figure(figsize=(25, 10))\n",
-    "#plot_tree(tree.DecisionTreeClassifier(max_depth=3).fit(x_train_subset, y_train), filled=True, feature_names=important_cols)\n",
     "plot_tree(tree.DecisionTreeClassifier(max_depth=4).fit(x_train_subset, y_train), filled=True, feature_names=important_cols, fontsize=8)\n",
     "plt.title(\"Example Tree using most important features\")\n",
     "plt.show()"
@@ -2438,7 +2438,8 @@
    "metadata": {},
    "source": [
     "###### Changing the crition had a small impact on the results.\n",
-    "###### Entropy and log loss perform similarly but tend to better than gini."
+    "###### Entropy and log loss perform similarly but tend to better than gini.\n",
+    "######"
    ]
   },
   {
@@ -2446,14 +2447,69 @@
    "id": "dabe1076-bc99-4e35-ac3d-79cf5a4c579b",
    "metadata": {},
    "source": [
-    "###### TODO\n",
-    "###### Implement decision forest"
+    "##### Random forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "08a370d2-66fe-496c-8d87-0036c1636901",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predictions using random forest on test set\n",
+      "Correct predicted heart attack: 601 out of 1374 (43.74%)\n",
+      "Correctly predicted no heart attack: 22019 out of 23229 (94.79%)\n",
+      "Total: 22620 out of 24603 (91.94%)\n",
+      "\n",
+      "Predictions on training set\n",
+      "Correct predicted heart attack: 12061 out of 12061 (100.00%)\n",
+      "Correctly predicted no heart attack: 204311 out of 209358 (97.59%)\n",
+      "Total: 216372 out of 221419 (97.72%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "clf_forest = RandomForestClassifier(n_estimators=100, max_depth=40, criterion=\"gini\", random_state=1000,\n",
+    "                                   bootstrap=False, n_jobs=-1,\n",
+    "                                    max_features=48, class_weight={0:1, 1:50}).fit(x_train, y_train)\n",
+    "print(\"Predictions using random forest on test set\")\n",
+    "stats = compare(clf_forest.predict(x_test), y_test)\n",
+    "\n",
+    "print(\"\\nPredictions on training set\")\n",
+    "stats = compare(clf_forest.predict(x_train), y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb248691-8a93-4c79-837a-2f4eb0dc131a",
+   "metadata": {},
+   "source": [
+    "##### Parameters\n",
+    "###### n_estimators - having more trees does not improve accuracy.\n",
+    "###### Gini performed much better than entropy and log loss.\n",
+    "###### Each tree is trained on the entire dataset but only uses 48 of the approximately 100 columns.\n",
+    "###### Depth and class weight (which biases trees towards more cases where heart attack is true) help improve predicting heart attacks without impacting the accuracy of non-heart attack cases."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "3c3ad6b0-401b-45f6-8637-5b4e2fd92cc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO\n",
+    "# Use gradient boosted trees and gridsearch for hyperparameter tuning"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86540955-3df5-4778-b928-5d7b661a953f",
+   "id": "2e05be93-b608-4fcf-b540-0f8fa0f6e7b6",
    "metadata": {},
    "outputs": [],
    "source": []
